--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,10 @@ html
     script(src='https://cdn.jsdelivr.net/npm/gijgo@1.9.10/js/gijgo.min.js', type='text/javascript')
     link(href='https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css', rel='stylesheet', type='text/css')
 
+    script(defer='', src='https://use.fontawesome.com/releases/v5.0.8/js/solid.js', integrity='sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l', crossorigin='anonymous')
+    script(defer='', src='https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js', integrity='sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c', crossorigin='anonymous')
+
+
     //- 원래 기간설정으로 달력활용하려 했으나.. 일단 passㅠ_ㅜ
     //- script(type='text/javascript', src='/bower_components/jquery/jquery.min.js')
     //- script(type='text/javascript', src='/bower_components/moment/min/moment.min.js')
@@ -29,15 +33,23 @@ html
     //- script(type='text/javascript', src='/path/to/bootstrap/dist/bootstrap.min.js')
     //- script(type='text/javascript', src='/path/to/bootstrap-datetimepicker.min.js')
     //- summernote 적용
-    link(href='http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css', rel='stylesheet')
-    script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js')
-    script(src='http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js')
-    // include summernote css/js
-    link(href='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.css', rel='stylesheet')
-    script(src='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js')
+    //- link(href='http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css', rel='stylesheet')
+    //- script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js')
+    //- script(src='http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js')
+    //- // include summernote css/js
+    //- link(href='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.css', rel='stylesheet')
+    //- script(src='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js')
     //- 아니 근데..css겹쳐서 적용되어서 topnav이상해짐..아나
     //- include summernote-ko-KR
-    script(src='lang/summernote-ko-KR.js')
+    //- script(src='lang/summernote-ko-KR.js')
+
+    //- link(rel='stylesheet', type='text/css', href='/semantic.min.css')
+    //- script(src='/jquery.min.js')
+    //- script(src='/semantic.min.js')
+    //- link(rel='stylesheet prefetch', href='http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.16.1/css/semantic.min.css')
+    //- link(rel='stylesheet prefetch', href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/icon.min.css')
+
+     
 
   
   body
