--- a/views/competitions/show.pug
+++ b/views/competitions/show.pug
@@ -3,44 +3,77 @@ extends ../layout
 block content
   .container
     h1.main-title= competition.title
-    
+
     .competition.show
       include _competition
-      |
-      br
 
-    .buttons
-      if currentUser
       .buttons
-        button.btn.btn-outline-warning #[i.fa.fa-thumbs-up ] like
-        a.btn.btn-outline-dark(href=`/competitions/${competition._id}/favorite`) Add Favorite
-        a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 신고
-
-    if(currentUser && competition.author.id == currentUser.id)
-        
-        a.btn.btn-outline-secondary(href=`/competitions/${competition.id}/edit`) 편집
-        | 
-        a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete` onclick='return confirm("정말 삭제하시겠습니까?");') 삭제
-        |
-        |
-        br
-        a.btn.btn-outline-primary(href=`/competitions/${competition.id}/edit`) 페이스북
-        | 
-        a.btn.btn-outline-info.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 트위터
-        | 
-
-
-
+        button.btn.btn-primary #[i.fa.fa-thumbs-up] Like
+        if currentUser && competition.author.id == currentUser.id
+          | 
+          a.btn.btn-outline-secondary(href=`/competitions/${competition.id}/edit`) Edit
+          | 
+          a.btn.btn-outline-danger.need-confirm-btn(href=`/competitions/${competition.id}?_method=delete`) Delete
+      
     if competition.numAnswers > 0
       hr
-      h3 댓글 (#{competition.numAnswers})
+      h3 #{competition.numAnswers} Answer(s)
       .answers.show
         each answer in answers
           include _answer
 
     form(action=`/competitions/${competition.id}/answers`, method='POST')
       .form-group
-        label(for='answer') 나의 댓글
+        label(for='answer') Your Answer
         textarea.form-control(name="content", rows="5")
-      button.btn.btn-outline-warning(type="submit") 댓글달기
+      button.btn.btn-primary(type="submit") Post Your Answer
+
+
+
+
+//- extends ../layout
+
+//- block content
+//-   .container
+//-     h1.main-title= competition.title
+    
+//-     .competition.show
+//-       include _competition
+//-       |
+//-       br
+
+//-     .buttons
+//-       if currentUser
+//-       .buttons
+//-         button.btn.btn-outline-warning #[i.fa.fa-thumbs-up ] like
+//-         a.btn.btn-outline-dark(href=`/competitions/${competition._id}/favorite`) Add Favorite
+//-         a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 신고
+
+//-     if(currentUser && competition.author.id == currentUser.id)
+        
+//-         a.btn.btn-outline-secondary(href=`/competitions/${competition.id}/edit`) 편집
+//-         | 
+//-         a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete` onclick='return confirm("정말 삭제하시겠습니까?");') 삭제
+//-         |
+//-         |
+//-         br
+//-         a.btn.btn-outline-primary(href=`/competitions/${competition.id}/edit`) 페이스북
+//-         | 
+//-         a.btn.btn-outline-info.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 트위터
+//-         | 
+
+
+
+//-     if competition.numAnswers > 0
+//-       hr
+//-       h3 댓글 (#{competition.numAnswers})
+//-       .answers.show
+//-         each answer in answers
+//-           include _answer
+
+//-     form(action=`/competitions/${competition.id}/answers`, method='POST')
+//-       .form-group
+//-         label(for='answer') 나의 댓글
+//-         textarea.form-control(name="content", rows="5")
+//-       button.btn.btn-outline-warning(type="submit") 댓글달기
 
