--- a/views/competitions/_competition.pug
+++ b/views/competitions/_competition.pug
@@ -1,4 +1,5 @@
-.content= competition.content
+//- .content= competition.content
+//- .content= competition.field
 .tags.badges
   each tag in competition.tags
     span.badge.badge-phill.badge-secondary= tag
