--- a/views/competitions/new.pug
+++ b/views/competitions/new.pug
@@ -5,8 +5,11 @@ block content
     h1.main-title New Competition
     form(action="/competitions", method="POST")
       include _form
-      button.btn.btn-outline-primary(type="submit") Post Your Competition
-
+      button.btn.btn-outline-warning(type="submit") Post Your Competition
+      |
+      br
+      |
+      br  
     
 
 //- extends ../layout
