--- a/views/competitions/show.pug
+++ b/views/competitions/show.pug
@@ -1,19 +1,76 @@
 extends ../layout
 
+
+
 block content
   .container
+
+      
     h1.main-title= competition.title
+
+    .competition.show
+      .row
+        .col-sm-8
+          | 공모요강
+          .content= competition.content
+          br
+          | 분야
+          .content= competition.field
+          |
+          br
+          | 응시대상
+          .content= competition.participant
+          |
+          br
+          | 주최사
+          .content= competition.sponsor
+          |
+          br
+          | 시상내역
+          .content= competition.award
+          |
+          br
+          | 접수시작
+          .content= competition.startTime  
+          |
+          br
+          | 접수종료
+          .content=competition.endTime
+          |
+          br
+          | 홈페이지
+          .content= competition.homepage
+          |
+          br
+          | 담당자
+          .content= competition.person
+          |
+          br
+          | 연락처
+          .content= competition.contact
+
+ 
+
 
     .competition.show
       include _competition
 
       .buttons
-        button.btn.btn-primary #[i.fa.fa-thumbs-up] Like
-        if currentUser && competition.author.id == currentUser.id
-          | 
-          a.btn.btn-outline-secondary(href=`/competitions/${competition.id}/edit`) Edit
-          | 
-          a.btn.btn-outline-danger.need-confirm-btn(href=`/competitions/${competition.id}?_method=delete`) Delete
+        if (currentUser && currentUser.email == 'admin@gmail.com')  
+          button.btn.btn-primary.competition-like-btn(data-id=competition.id) 
+            span.for-loading #[i.fa.fa-spin.fa-refresh] Loading
+            span #[i.fa.fa-thumbs-up] Like
+
+          a.btn.btn-outline-danger(href=`/competitions/${competition._id}/favorite`) 
+            i.fas.fa-heart
+            | Favorite
+
+
+          if competition.author && competition.author.id == currentUser.id
+            | 
+            a.btn.btn-outline-secondary(href=`/competitions/${competition.id}/edit`) Edit
+            | 
+            a.btn.btn-outline-danger.need-confirm-btn(href=`/competitions/${competition.id}?_method=delete`) Delete
       
     if competition.numAnswers > 0
       hr
@@ -22,58 +79,16 @@ block content
         each answer in answers
           include _answer
 
-    form(action=`/competitions/${competition.id}/answers`, method='POST')
-      .form-group
-        label(for='answer') Your Answer
-        textarea.form-control(name="content", rows="5")
-      button.btn.btn-primary(type="submit") Post Your Answer
+    if currentUser
+      form(action=`/competitions/${competition.id}/answers`, method='POST')
+        .form-group
+          label(for='answer') Your Answer
+          textarea.form-control(name="content", rows="5")
+        button.btn.btn-warning(type="submit" style='color: white') Post Your Answer
+        |
+        br
+        |
+        br  
 
 
-
-
-//- extends ../layout
-
-//- block content
-//-   .container
-//-     h1.main-title= competition.title
-    
-//-     .competition.show
-//-       include _competition
-//-       |
-//-       br
-
-//-     .buttons
-//-       if currentUser
-//-       .buttons
-//-         button.btn.btn-outline-warning #[i.fa.fa-thumbs-up ] like
-//-         a.btn.btn-outline-dark(href=`/competitions/${competition._id}/favorite`) Add Favorite
-//-         a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 신고
-
-//-     if(currentUser && competition.author.id == currentUser.id)
-        
-//-         a.btn.btn-outline-secondary(href=`/competitions/${competition.id}/edit`) 편집
-//-         | 
-//-         a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete` onclick='return confirm("정말 삭제하시겠습니까?");') 삭제
-//-         |
-//-         |
-//-         br
-//-         a.btn.btn-outline-primary(href=`/competitions/${competition.id}/edit`) 페이스북
-//-         | 
-//-         a.btn.btn-outline-info.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 트위터
-//-         | 
-
-
-
-//-     if competition.numAnswers > 0
-//-       hr
-//-       h3 댓글 (#{competition.numAnswers})
-//-       .answers.show
-//-         each answer in answers
-//-           include _answer
-
-//-     form(action=`/competitions/${competition.id}/answers`, method='POST')
-//-       .form-group
-//-         label(for='answer') 나의 댓글
-//-         textarea.form-control(name="content", rows="5")
-//-       button.btn.btn-outline-warning(type="submit") 댓글달기
-
+  script(src='/javascripts/competition_client.js')
