--- a/views/signin.pug
+++ b/views/signin.pug
@@ -20,7 +20,7 @@ block content
             input(type="checkbox", value="remember-me")
             |
             | Remember me
-        button.btn.btn-primary.btn-block(type='submit') Signin
+        button.btn.btn-warning.btn-block(type='submit' style='color: white') Signin
         a.btn.btn-dark.btn-block(href='/auth/facebook')
           i.fa.fa-facebook.fa-lg
           | &nbsp;
