--- a/views/test.html
+++ b/views/test.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
- 
-    <!-- Include external CSS. -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css">
- 
-    <!-- Include Editor style. -->
-    <link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.1/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.1/css/froala_style.min.css" rel="stylesheet" type="text/css" />
-  </head>
- 
-  <body>
-    <!-- Create a tag that we will use as the editable area. -->
-    <!-- You can use a div tag as well. -->
-    <textarea></textarea>
- 
-    <!-- Include external JS libs. -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/xml/xml.min.js"></script>
- 
-    <!-- Include Editor JS files. -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/froala-editor@2.9.1/js/froala_editor.pkgd.min.js"></script>
- 
-    <!-- Initialize the editor. -->
-    <script> $(function() { $('textarea').froalaEditor() }); </script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+<body>
+        <select id="selectBox" name="selectBox">
+                <option value="option1"> option1 </option>
+                <option value="option2"> option2 </option>
+                <option value="option3"> option3 </option>
+                <option value="option4"> option4 </option>
+            </select>
+
+
+            <script>
+            $("#selectBox").append('<option value="option6">option6</option>');
+            </script>
+
+            <script>$.each(selectValues, function(key, value) {
+                    $('#mySelect')
+                        .append($("<option></option>")
+                        .attr("value",key)
+                        .text(value));
+               });
+            </script>
+
+            <script>
+            <select id="selectBox" name="selectBox">
+                <option value="option1"> option1 </option>
+                <option value="option2"> option2 </option>
+                <option value="option3"> option3 </option>
+                <option value="option4"> option4 </option>
+            </select>
+            </script>
+
+
+            <script>  $("#selectBox option[value='option1']").remove();</script>
+      
+</body>
 </html>
