--- a/views/users/favorite.pug
+++ b/views/users/favorite.pug
@@ -5,9 +5,18 @@ block content
   .container
     br
     h1.main-title My favorite
-    br
-    br
-    if(favorite.total <= 0)
+    .row.col-md-7.table-responsive
+      table#customerTable.table.table-bordered.table-hover
+        thead
+          tr
+            th Id
+            th Title
+            th content
 
-    p 북마크한 이벤트가 없습니다.
+        tbody
+
+
+
+
+
 
