--- a/views/index.pug
+++ b/views/index.pug
@@ -1,93 +1,77 @@
 extends layout
 
 block hero-unit
-  //- .jumbotron
-  //-   .container
-      
+
 block content
   |
   br
   .container
-        //- h3 환영합니다! 
-        //- p 환영합니다! 
-        p 
-          .card-group
-            .card
-              #carouselExampleFade.carousel.slide.carousel-fade(data-ride='carousel')
-                .carousel-inner
-                  .carousel-item.active
-                    img.d-block.w-100(src='images/chess.jpg', alt='First slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      h1 Competition Collection
-                      p
-                        |  환영합니다! Competition Collection 공모전 집합소 CC입니다. 
-                  .carousel-item
-                    img.d-block.w-100(src='images/golf.jpg', alt='Second slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      p
-                        |  본 서비스에서는 공모전 관련 정보를 등록하고, 검색 확인할 수 있습니다.  
-                  .carousel-item
-                    img.d-block.w-100(src='images/chess.jpg', alt='Third slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      p
-                        | 좋은 공모전을 통하여 다같이 성장할 수 있는 기회가 되길 바랍니다. 
-                a.carousel-control-prev(href='#carouselExampleFade', role='button', data-slide='prev')
-                  span.carousel-control-prev-icon(aria-hidden='true')
-                  span.sr-only Previous
-                a.carousel-control-next(href='#carouselExampleFade', role='button', data-slide='next')
-                  span.carousel-control-next-icon(aria-hidden='true')
-                  span.sr-only Next
-            .card
-              #carouselExampleFade.carousel.slide.carousel-fade(data-ride='carousel')
-                .carousel-inner
-                  .carousel-item.active
-                    img.d-block.w-100(src='images/chess.jpg', alt='First slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      h1 Competition Collection
-                      p
-                        |  환영합니다! Competition Collection 공모전 집합소 CC입니다. 
-                  .carousel-item
-                    img.d-block.w-100(src='images/golf.jpg', alt='Second slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      p
-                        |  본 서비스에서는 공모전 관련 정보를 등록하고, 검색 확인할 수 있습니다.  
-                  .carousel-item
-                    img.d-block.w-100(src='images/chess.jpg', alt='Third slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      p
-                        | 좋은 공모전을 통하여 다같이 성장할 수 있는 기회가 되길 바랍니다. 
-                a.carousel-control-prev(href='#carouselExampleFade', role='button', data-slide='prev')
-                  span.carousel-control-prev-icon(aria-hidden='true')
-                  span.sr-only Previous
-                a.carousel-control-next(href='#carouselExampleFade', role='button', data-slide='next')
-                  span.carousel-control-next-icon(aria-hidden='true')
-                  span.sr-only Next
-            .card
-              #carouselExampleFade.carousel.slide.carousel-fade(data-ride='carousel')
-                .carousel-inner
-                  .carousel-item.active
-                    img.d-block.w-100(src='images/chess.jpg', alt='First slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      h1 Competition Collection
-                      p
-                        |  환영합니다! Competition Collection 공모전 집합소 CC입니다. 
-                  .carousel-item
-                    img.d-block.w-100(src='images/golf.jpg', alt='Second slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      p
-                        |  본 서비스에서는 공모전 관련 정보를 등록하고, 검색 확인할 수 있습니다.  
-                  .carousel-item
-                    img.d-block.w-100(src='images/chess.jpg', alt='Third slide', height='500')
-                    .carousel-caption.d-none.d-md-block
-                      p
-                        | 좋은 공모전을 통하여 다같이 성장할 수 있는 기회가 되길 바랍니다. 
-                a.carousel-control-prev(href='#carouselExampleFade', role='button', data-slide='prev')
-                  span.carousel-control-prev-icon(aria-hidden='true')
-                  span.sr-only Previous
-                a.carousel-control-next(href='#carouselExampleFade', role='button', data-slide='next')
-                  span.carousel-control-next-icon(aria-hidden='true')
-                  span.sr-only Next
-            
+    .container-fluid
+      // Control the column width, and how they should appear on different devices
+      .row
+        .col-sm-3
+          ul.list-group.list-group-flush
+            | 
+            li.list-group-item 기획/아이디어
+            li.list-group-item 광고/마케팅
+            li.list-group-item 논문.리포트
+            li.list-group-item 영상/UCC/사진
+            li.list-group-item 디자인/캐릭터/웹툰
+            li.list-group-item 웹/모바일/플래시
+            li.list-group-item 게임/소프트웨어
+            li.list-group-item 과학/공학
+            li.list-group-item 문학/글/시나리오
+            li.list-group-item 건축/건설/인테리어
+            li.list-group-item 예체능/미술/음악
+            li.list-group-item 대외활동/서포터즈
+            li.list-group-item 봉사활동
+            li.list-group-item 취업/창업
+            li.list-group-item 해외
+            li.list-group-item 기타
+        .col-sm-9
+          .jumbotron.jumbotron-fluid(style='background:transparent !important')
+            .container
+              h4.display-10 Competition Collection 공모전 집합소 CC입니다.
+              p.lead-5
+                | 본 서비스에서는 공모전 관련 정보를 등록하고, 검색 확인할 수 있습니다. 
+                br
+                | 좋은 공모전을 통하여 다같이 성장할 수 있는 기회가 되길 바랍니다.
+              a.btn.pull-right.btn-success(href="/competitions/new", role='button')          
+                | &nbsp; 공모전 등록하러 가기 
+          
+          #carouselExampleFade.carousel.slide.carousel-fade(data-ride='carousel')
+            .carousel-inner
+              .carousel-item.active
+                img.d-block.w-100(src='images/chess.jpg', alt='First slide', height='500')
+                .carousel-caption.d-none.d-md-block
+                  h1 Competition Collection
+                  p
+                    |  환영합니다! Competition Collection 공모전 집합소 CC입니다. 
+              .carousel-item
+                img.d-block.w-100(src='images/golf.jpg', alt='Second slide', height='500')
+                .carousel-caption.d-none.d-md-block
+                  p
+                    |  본 서비스에서는 공모전 관련 정보를 등록하고, 검색 확인할 수 있습니다.  
+              .carousel-item
+                img.d-block.w-100(src='images/chess.jpg', alt='Third slide', height='500')
+                .carousel-caption.d-none.d-md-block
+                  p
+                    | 좋은 공모전을 통하여 다같이 성장할 수 있는 기회가 되길 바랍니다. 
+            a.carousel-control-prev(href='#carouselExampleFade', role='button', data-slide='prev')
+              span.carousel-control-prev-icon(aria-hidden='true')
+              span.sr-only Previous
+            a.carousel-control-next(href='#carouselExampleFade', role='button', data-slide='next')
+              span.carousel-control-next-icon(aria-hidden='true')
+              span.sr-only Next
+
+        
+        |
+        br
+        |
+        br
+        |
+        |
+        |
             
         br
         br
@@ -95,73 +79,35 @@ block content
           .card
             img.card-img-top(src='images/poster1.png', alt='Card image cap')
             .card-body
-              h5.card-title Card title
+              h5.card-title 2018 빅데이터 아이디어 공모전
               p.card-text
-                | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                | This is a wideㅁㅇㄹㅇr card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
               p.card-text
                 small.text-muted Last updated 3 mins ago
           .card
             img.card-img-top(src='images/poster2.jpg', alt='Card image cap')
             .card-body
-              h5.card-title Card title
+              h5.card-title Bu:Star 챌린지 게임공모전
               p.card-text This card has supporting text below as a natural lead-in to additional content.
               p.card-text
                 small.text-muted Last updated 3 mins ago
           .card
             img.card-img-top(src='images/poster3.jpg', alt='Card image cap')
             .card-body
-              h5.card-title Card title
+              h5.card-title 2018년 ICT 융합 공모전
               p.card-text
                 | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
               p.card-text
                 small.text-muted Last updated 3 mins ago
           .card
-            img.card-img-top(src='images/poster3.jpg', alt='Card image cap')
+            img.card-img-top(src='images/poster4.png', alt='Card image cap')
             .card-body
-              h5.card-title Card title
+              h5.card-title 네이버 웨일 확장앱 콘테스트
               p.card-text
                 | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
               p.card-text
                 small.text-muted Last updated 3 mins ago
-          .card
-            img.card-img-top(src='images/poster3.jpg', alt='Card image cap')
-            .card-body
-              h5.card-title Card title
-              p.card-text
-                | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
-              p.card-text
-                small.text-muted Last updated 3 mins ago
-                 
-        //- #carouselExampleFade.carousel.slide.carousel-fade(data-ride='carousel')
-        //-   .carousel-inner
-        //-     .carousel-item.active
-        //-       img.d-block.w-100(src='images/chess.jpg', alt='First slide', height='700')
-        //-       .carousel-caption.d-none.d-md-block
-        //-         h1 Competition Collection
-        //-         p
-        //-           |  환영합니다! Competition Collection 공모전 집합소 CC입니다. 
-        //-     .carousel-item
-        //-       img.d-block.w-100(src='images/golf.jpg', alt='Second slide', height='700')
-        //-       .carousel-caption.d-none.d-md-block
-        //-         p
-        //-           |  본 서비스에서는 공모전 관련 정보를 등록하고, 검색 확인할 수 있습니다.  
-        //-     .carousel-item
-        //-       img.d-block.w-100(src='images/chess.jpg', alt='Third slide', height='700')
-        //-       .carousel-caption.d-none.d-md-block
-        //-         p
-        //-           | 좋은 공모전을 통하여 다같이 성장할 수 있는 기회가 되길 바랍니다. 
-        //-   a.carousel-control-prev(href='#carouselExampleFade', role='button', data-slide='prev')
-        //-     span.carousel-control-prev-icon(aria-hidden='true')
-        //-     span.sr-only Previous
-        //-   a.carousel-control-next(href='#carouselExampleFade', role='button', data-slide='next')
-        //-     span.carousel-control-next-icon(aria-hidden='true')
-        //-     span.sr-only Next
-            //- .card-body
-            //-   h5.card-title Card title
-            //-   p.card-text
-            //-     | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
-            //-   p.card-text
-            //-     small.text-muted Last updated 3 mins ago                
+
         |
         br
         |
