--- a/public/stylesheets/competitions.scss
+++ b/public/stylesheets/competitions.scss
@@ -130,3 +130,20 @@
     }
   }
 }
+
+.competition-like-btn, .answer-like-btn {
+  .for-loading {display: none;}
+  cursor: pointer; 
+
+  &.loading {
+    & > span {display: none;}
+    .for-loading {display: inline-block;}
+    filter: opacity(30%);
+    cursor: wait;
+  }
+
+  &.disabled {
+    color: #bbb;
+    cursor: default;
+  }
+}
