--- a/views/competitions/_form.pug
+++ b/views/competitions/_form.pug
@@ -3,8 +3,8 @@
   input.form-control(type="text", name="title", placeholder="What's your competition?", value=competition.title)
 .form-group
   label(for="content") 공모요강
-  textarea.form-control(name="content")= competition.content
-  
+  textarea.form-control#summernote(name="content" )= competition.content
+
 
 .form-group
   label(for="field") 분야 &nbsp;
@@ -90,5 +90,68 @@ br
 
 
 
+
+
+script.
+
+  $('#summernote').summernote({
+  placeholder: 'Hello bootstrap 4',
+  tabsize: 2,
+  height: 100
+  });
+  
+  $(document).ready(function () {
+    // Summernote, edit enter key
+    $.summernote.addPlugin({
+      name : 'myenter',
+      events : {
+        // redefine insertParagraph 
+        'insertParagraph' : function(event, editor, layoutInfo) {
+
+          // custom enter key
+          var newLine = '<br />';
+          pasteHtmlAtCaret(newLine);
+
+          // to stop default event
+          event.preventDefault();
+        }
+      }
+    });
+  });
+
+  function pasteHtmlAtCaret(html) {
+      var sel, range;
+      if (window.getSelection) {
+          // IE9 and non-IE
+          sel = window.getSelection();
+          if (sel.getRangeAt && sel.rangeCount) {
+              range = sel.getRangeAt(0);
+              range.deleteContents();
+
+              // Range.createContextualFragment() would be useful here but is
+              // only relatively recently standardized and is not supported in
+              // some browsers (IE9, for one)
+              var el = document.createElement("div");
+              el.innerHTML = html;
+              var frag = document.createDocumentFragment(), node, lastNode;
+              while ( (node = el.firstChild) ) {
+                  lastNode = frag.appendChild(node);
+              }
+              range.insertNode(frag);
+
+              // Preserve the selection
+              if (lastNode) {
+                  range = range.cloneRange();
+                  range.setStartAfter(lastNode);
+                  range.collapse(true);
+                  sel.removeAllRanges();
+                  sel.addRange(range);
+              }
+          }
+      } else if (document.selection && document.selection.type != "Control") {
+          // IE < 9
+          document.selection.createRange().pasteHTML(html);
+      }
+  }
 
 
